--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,7 +18,7 @@ html {
 
 body {
   font-family: $body-font-family;
-  font-size: inherit;
+  // font-size: inherit;
   line-height: $body-line-height;
   color: $body-text-color;
   background-color: $body-background-color;
