--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -9,7 +9,7 @@
     padding: 0.2em 0.15em;
     font-weight: 400;
     background-color: $code-background-color;
-    border: $border $border-color;
+    // border: $border $border-color;
     border-radius: $border-radius;
   }
 }
