[fix] font-size inherit -> 14px

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,8 +18,8 @@ html {
 
 body {
   font-family: $body-font-family;
-  font-size: inherit;
-  
+  // font-size: inherit;
+  font-size: 14px;
   line-height: $body-line-height;
   color: $body-text-color;
   background-color: $body-background-color;
