--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -19,7 +19,7 @@ html {
 body {
   font-family: $body-font-family;
   // font-size: inherit;
-  // font-size: 14px;
+  font-size: 14px;
   line-height: $body-line-height;
   color: $body-text-color;
   background-color: $body-background-color;
