--- a/_sass/support/mixins/_layout.scss
+++ b/_sass/support/mixins/_layout.scss
@@ -9,16 +9,16 @@
   // Retrieves the value from the key
   $value: map-get($media-queries, $name);
 
-  // // If the key exists in the map
-  // @if $value {
-  //   // Prints a media query based on the value
-  //   @media (min-width: rem($value)) {
-  //     @content;
-  //   }
-  // } @else {
-  //   @warn "No value could be retrieved from `#{$media-query}`. "
-  //     + "Please make sure it is defined in `$media-queries` map.";
-  // }
+  // If the key exists in the map
+  @if $value {
+    // Prints a media query based on the value
+    @media (min-width: rem($value)) {
+      @content;
+    }
+  } @else {
+    @warn "No value could be retrieved from `#{$media-query}`. "
+      + "Please make sure it is defined in `$media-queries` map.";
+  }
 }
 
 // Responsive container
