--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -4,7 +4,7 @@ $body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
   roboto, "Helvetica Neue", arial, sans-serif !default;
 // $mono-font-family: "SFMono-Regular", menlo, consolas, monospace !default;
 // $mono-font-family: "Consolas" !default;
-$mono-font-family: "SF Mono",Consolas,"BlinkMacSystemFont","Segoe UI","Hiragino Sans","Hiragino Kaku Gothic ProN","Meiryo",sans-serif,"-apple-system";
+$mono-font-family: Consolas,"Segoe UI","Hiragino Sans","Hiragino Kaku Gothic ProN","Meiryo",sans-serif,"BlinkMacSystemFont","-apple-system";
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
