--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2,6 +2,7 @@
 // stylelint-disable selector-no-type, selector-max-type, selector-max-specificity, selector-max-id
 
 * {
+  font-size: 14px !important;
   box-sizing: border-box;
 }
 
