--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@ layout: table_wrappers
 
 <!DOCTYPE html>
 
-<html lang="{{ site.lang | default: 'ja-JP' }}">
+<!-- <html lang="{{ site.lang | default: 'ja-JP' }}"> -->
+<html lang="ja-JP" style="font-size: 14px !important">
 {% include head.html %}
 <body>
   <a class="skip-to-main" href="#main-content">Skip to main content</a>
