--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
+{% if site.last_edit_timestamp and site.last_edit_time_format and page.last_modified_date %}
+  <p class="text-small text-grey-dk-000 mb-0 mr-2">
+    Page last modified: <span class="d-inline-block">{{ page.last_modified_date | date: site.last_edit_time_format }}</span>.
+  </p>
+{% endif %}
+
 {{ content }}
