--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -68,8 +68,10 @@ $body-text-color: $grey-dk-100 !default;
 $body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $purple-000 !default;
-$btn-primary-color: $purple-100 !default;
+// $link-color: $purple-000 !default;
+$link-color: $green-100 !default;
+// $btn-primary-color: $purple-100 !default;
+$btn-primary-color: $green-200 !default;
 $base-button-color: #f7f7f7 !default;
 
 // Spacing
